# BaseGuiApp

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.hpp
src/OpenGL/: main.cpp
src/Windows/: main.cpp
